# SelfBalanceSkateboard

./: .gitignore  i2c_master.c  i2c_master.lst  imu.h  imu.lst  main.c  main.lst  main.map  makefile  motor.h  motor.lst  nunchuck.c  nunchuck.h  nunchuck.lst  serial.h  serial.lst  twi.lst
CFirmware/: README.md  imu.c  main.c  motor.c  nunchuck.h  serial.c
RustFirmware/: Cargo.toml  openocd.gdb
RustFirmware/src/: accel.rs  gyro.rs  main.rs  nunchuck.rs
