[package]
authors = ["SamP20 <samp20@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
name = "stm32"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
cortex-m-semihosting = "0.3.3"
embedded-hal = "0.2"
nb = "0.1"
micromath = "0.3"

# Uncomment for the device example.
[dependencies.stm32l4xx-hal]
features = ["stm32l4x2", "rt"]
version = "0.4.0"

# this lets you use `cargo fix`!
[[bin]]
name = "stm32"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
